Add Section rules

--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -14,6 +14,248 @@ centos7cis_section6: true
 centos7cis_level1: true
 centos7cis_level2: false
 
+# Define rules to apply
+# Added by Kenneth Masis 11/7/2025
+
+# Section 1 Rules #
+centos7cis_rule_1.1.1.1: true
+centos7cis_rule_1.1.1.2: true
+centos7cis_rule_1.1.1.3: true
+centos7cis_rule_1.1.1.4: true
+centos7cis_rule_1.1.1.5: true
+centos7cis_rule_1.1.1.6: false ## Not selected by default
+centos7cis_rule_1.1.1.7: false ## Not selected by default
+centos7cis_rule_1.1.1.8: true
+centos7cis_rule_1.1.2.1: true
+centos7cis_rule_1.1.2.2: true
+centos7cis_rule_1.1.2.3: true
+centos7cis_rule_1.1.2.4: true
+centos7cis_rule_1.1.2.5: true
+centos7cis_rule_1.1.2.6: true
+centos7cis_rule_1.1.2.7: true
+centos7cis_rule_1.2.1: false ## Not selected by default
+centos7cis_rule_1.2.2: true
+centos7cis_rule_1.2.3: false ## Not selected by default
+centos7cis_rule_1.2.4: false ## Not selected by default
+centos7cis_rule_1.2.5: false ## Not selected by default
+centos7cis_rule_1.3.1: false ## Not selected by default
+centos7cis_rule_1.3.2: true
+centos7cis_rule_1.3.3: true
+centos7cis_rule_1.4.1: true
+centos7cis_rule_1.4.2: true
+centos7cis_rule_1.4.3: true
+centos7cis_rule_1.4.4: true
+centos7cis_rule_1.5.1.1: true
+centos7cis_rule_1.5.1.2: true
+centos7cis_rule_1.5.1.3: false ## Not selected by default
+centos7cis_rule_1.5.1.4: false ## Not selected by default
+centos7cis_rule_1.5.1.5: false ## Not selected by default
+centos7cis_rule_1.5.1.6: true
+centos7cis_rule_1.5.1.7: true
+centos7cis_rule_1.5.1.8: true
+centos7cis_rule_1.6.1: true
+centos7cis_rule_1.6.2: true
+centos7cis_rule_1.6.3: true
+centos7cis_rule_1.6.4: true
+centos7cis_rule_1.6.5: true
+centos7cis_rule_1.6.6: true
+centos7cis_rule_1.7.1: false ## Not selected by default
+centos7cis_rule_1.7.2: true
+centos7cis_rule_1.7.3: true
+centos7cis_rule_1.7.4: true
+centos7cis_rule_1.7.5: true
+centos7cis_rule_1.7.6: true
+centos7cis_rule_1.7.7: true
+centos7cis_rule_1.7.8: true
+centos7cis_rule_1.7.9: true
+centos7cis_rule_1.7.10: true
+
+# Section 2 Rules #
+centos7cis_rule_2.1.1: true
+centos7cis_rule_2.1.2: true
+centos7cis_rule_2.1.3: true
+centos7cis_rule_2.2.1: true
+centos7cis_rule_2.2.2: true
+centos7cis_rule_2.2.3: true
+centos7cis_rule_2.2.4: true
+centos7cis_rule_2.2.5: true
+centos7cis_rule_2.2.6: true
+centos7cis_rule_2.2.7: true
+centos7cis_rule_2.2.8: true
+centos7cis_rule_2.2.9: true
+centos7cis_rule_2.2.10: true
+centos7cis_rule_2.2.11: true
+centos7cis_rule_2.2.12: true
+centos7cis_rule_2.2.13: true
+centos7cis_rule_2.2.14: true
+centos7cis_rule_2.2.15: true
+centos7cis_rule_2.2.16: true
+centos7cis_rule_2.2.17: true
+centos7cis_rule_2.2.18: true
+centos7cis_rule_2.2.19: true
+centos7cis_rule_2.2.20: false ## Not selected by default
+centos7cis_rule_2.2.21: true
+centos7cis_rule_2.2.22: false ## Not selected by default
+centos7cis_rule_2.3.1: true
+centos7cis_rule_2.3.2: false ## Not selected by default
+centos7cis_rule_2.3.3: true
+centos7cis_rule_2.3.4: true
+centos7cis_rule_2.3.5: true
+
+# Section 3 Rules #
+centos7cis_rule_3.1.1: false ## Not selected by default
+centos7cis_rule_3.1.2: false ## Not selected by default
+centos7cis_rule_3.1.3: true
+centos7cis_rule_3.2.1: false ## Not selected by default
+centos7cis_rule_3.2.2: false ## Not selected by default
+centos7cis_rule_3.2.3: false ## Not selected by default
+centos7cis_rule_3.2.4: false ## Not selected by default
+centos7cis_rule_3.3.1: true
+centos7cis_rule_3.3.2: true
+centos7cis_rule_3.3.3: true
+centos7cis_rule_3.3.4: true
+centos7cis_rule_3.3.5: true
+centos7cis_rule_3.3.6: true
+centos7cis_rule_3.3.7: true
+centos7cis_rule_3.3.8: true
+centos7cis_rule_3.3.9: true
+centos7cis_rule_3.3.10: true
+centos7cis_rule_3.3.11: true
+centos7cis_rule_3.4.1: false ## Not selected by default
+centos7cis_rule_3.4.2: false ## Not selected by default
+centos7cis_rule_3.4.3: false ## Not selected by default
+centos7cis_rule_3.4.4: false ## Not selected by default
+
+# Section 4 Rules #
+centos7cis_rule_4.1.1.1: true
+centos7cis_rule_4.1.1.2: true
+centos7cis_rule_4.1.1.3: true
+centos7cis_rule_4.1.1.4: true
+centos7cis_rule_4.1.1.5: true
+centos7cis_rule_4.1.1.6: true
+centos7cis_rule_4.1.1.7: true
+centos7cis_rule_4.1.1.8: true
+centos7cis_rule_4.1.2.1: true
+centos7cis_rule_4.2.1: true
+centos7cis_rule_4.2.2: true
+centos7cis_rule_4.2.3: true
+centos7cis_rule_4.2.4: true
+centos7cis_rule_4.2.5: true
+centos7cis_rule_4.2.6: false ## Not selected by default
+centos7cis_rule_4.2.7: true
+centos7cis_rule_4.2.8: false ## Not selected by default
+centos7cis_rule_4.2.9: false ## Not selected by default
+centos7cis_rule_4.2.10: true
+centos7cis_rule_4.2.11: true
+centos7cis_rule_4.2.12: false ## Not selected by default
+centos7cis_rule_4.2.13: true
+centos7cis_rule_4.2.14: true
+centos7cis_rule_4.2.15: true
+centos7cis_rule_4.2.16: true
+centos7cis_rule_4.2.17: true
+centos7cis_rule_4.2.18: true
+centos7cis_rule_4.2.19: true
+centos7cis_rule_4.2.20: true
+centos7cis_rule_4.2.21: true
+centos7cis_rule_4.2.22: true
+centos7cis_rule_4.3.1: true
+centos7cis_rule_4.3.2: false ## Not selected by default
+centos7cis_rule_4.3.3: true
+centos7cis_rule_4.3.4: false ## Not selected by default
+centos7cis_rule_4.3.5: true
+centos7cis_rule_4.3.6: true
+centos7cis_rule_4.3.7: true
+centos7cis_rule_4.4.1: true
+centos7cis_rule_4.4.2: true
+centos7cis_rule_4.5.1: true
+centos7cis_rule_4.5.2: true
+centos7cis_rule_4.5.3: true
+
+# Section 5 Rules #
+centos7cis_rule_5.1.1.1: true
+centos7cis_rule_5.1.1.2: false ## Not selected by default
+centos7cis_rule_5.1.1.3: false ## Not selected by default
+centos7cis_rule_5.1.1.4: true
+centos7cis_rule_5.1.1.5: false ## Not selected by default
+centos7cis_rule_5.1.1.6: false ## Not selected by default
+centos7cis_rule_5.1.1.7: true
+centos7cis_rule_5.1.2.1: true
+centos7cis_rule_5.1.2.2: true
+centos7cis_rule_5.1.2.3: true
+centos7cis_rule_5.1.2.4: true
+centos7cis_rule_5.1.2.5: false ## Not selected by default
+centos7cis_rule_5.1.2.6: false ## Not selected by default
+centos7cis_rule_5.1.3: false ## Not selected by default
+centos7cis_rule_5.1.4: true
+centos7cis_rule_5.2.1.1: false ## Not selected by default
+centos7cis_rule_5.2.1.2: false ## Not selected by default
+centos7cis_rule_5.2.1.3: false ## Not selected by default
+centos7cis_rule_5.2.1.4: false ## Not selected by default
+centos7cis_rule_5.2.2.1: false ## Not selected by default
+centos7cis_rule_5.2.2.2: false ## Not selected by default
+centos7cis_rule_5.2.2.3: false ## Not selected by default
+centos7cis_rule_5.2.2.4: false ## Not selected by default
+centos7cis_rule_5.2.3.1: false ## Not selected by default
+centos7cis_rule_5.2.3.2: false ## Not selected by default
+centos7cis_rule_5.2.3.3: false ## Not selected by default
+centos7cis_rule_5.2.3.4: false ## Not selected by default
+centos7cis_rule_5.2.3.5: false ## Not selected by default
+centos7cis_rule_5.2.3.6: false ## Not selected by default
+centos7cis_rule_5.2.3.7: false ## Not selected by default
+centos7cis_rule_5.2.3.8: false ## Not selected by default
+centos7cis_rule_5.2.3.9: false ## Not selected by default
+centos7cis_rule_5.2.3.10: false ## Not selected by default
+centos7cis_rule_5.2.3.11: false ## Not selected by default
+centos7cis_rule_5.2.3.12: false ## Not selected by default
+centos7cis_rule_5.2.3.13: false ## Not selected by default
+centos7cis_rule_5.2.3.14: false ## Not selected by default
+centos7cis_rule_5.2.3.15: false ## Not selected by default
+centos7cis_rule_5.2.3.16: false ## Not selected by default
+centos7cis_rule_5.2.3.17: false ## Not selected by default
+centos7cis_rule_5.2.3.18: false ## Not selected by default
+centos7cis_rule_5.2.3.19: false ## Not selected by default
+centos7cis_rule_5.2.3.20: false ## Not selected by default
+centos7cis_rule_5.2.3.21: false ## Not selected by default
+centos7cis_rule_5.2.4.1: false ## Not selected by default
+centos7cis_rule_5.2.4.2: false ## Not selected by default
+centos7cis_rule_5.2.4.3: false ## Not selected by default
+centos7cis_rule_5.2.4.4: false ## Not selected by default
+centos7cis_rule_5.2.4.5: false ## Not selected by default
+centos7cis_rule_5.2.4.6: false ## Not selected by default
+centos7cis_rule_5.2.4.7: false ## Not selected by default
+centos7cis_rule_5.2.4.8: false ## Not selected by default
+centos7cis_rule_5.2.4.9: false ## Not selected by default
+centos7cis_rule_5.2.4.10: false ## Not selected by default
+centos7cis_rule_5.3.1: true
+centos7cis_rule_5.3.2: true
+
+# Section 6 Rules #
+centos7cis_rule_6.1.1: true
+centos7cis_rule_6.1.2: true
+centos7cis_rule_6.1.3: true
+centos7cis_rule_6.1.4: true
+centos7cis_rule_6.1.5: true
+centos7cis_rule_6.1.6: true
+centos7cis_rule_6.1.7: true
+centos7cis_rule_6.1.8: true
+centos7cis_rule_6.1.9: true
+centos7cis_rule_6.1.10: true
+centos7cis_rule_6.1.11: false ## Not selected by default
+centos7cis_rule_6.1.12: true
+centos7cis_rule_6.1.13: false ## Not selected by default
+centos7cis_rule_6.1.14: false
+centos7cis_rule_6.2.1: true
+centos7cis_rule_6.2.2: true
+centos7cis_rule_6.2.3: true
+centos7cis_rule_6.2.4: true
+centos7cis_rule_6.2.5: true
+centos7cis_rule_6.2.6: true
+centos7cis_rule_6.2.7: true
+centos7cis_rule_6.2.8: true
+centos7cis_rule_6.2.9: true
+centos7cis_rule_6.2.10: true
+centos7cis_rule_6.2.11: true
+
 ############################
 ### Section 1 Parameters ###
 ############################
