--- a/tasks/prelim.yml
+++ b/tasks/prelim.yml
@@ -7,17 +7,35 @@
   changed_when: no
   check_mode: no
 
-- name: "PRELIM | Gather accounts with empty password fields"
-  shell: "cat /etc/shadow | awk -F: '($2 == \"\" ) {j++;print $1; } END {exit j}'"
-  register: empty_password_accounts
-  failed_when: false
-  changed_when: no
-  check_mode: no
+#- name: "PRELIM | Gather accounts with empty password fields"
+#  shell: "cat /etc/shadow | awk -F: '($2 == \"\" ) {j++;print $1; } END {exit j}'"
+#  register: empty_password_accounts
+#  failed_when: false
+#  changed_when: no
+#  check_mode: no
+
+## Added print statement for empty password accounts
+#- name: "PRELIM | Print accounts with empty password fields"
+#  ansible.builtin.debug:
+#    msg: "Accounts with empty passwords: {{ empty_password_accounts.stdout_lines }}"
+#  when: empty_password_accounts.stdout != ""
+
+- name: "PRELIM | Gather shadow entries"
+  ansible.builtin.getent:
+    database: shadow
+
+- name: "PRELIM | Find accounts with empty password fields"
+  set_fact:
+    empty_password_accounts: >-
+      {{ lookup('dict', ansible_facts.getent_shadow)
+         | selectattr('value', 'equalto', '')       # empty password hash
+         | map(attribute='key')
+         | list }}
 
 - name: "PRELIM | Print accounts with empty password fields"
-  ansible.builtin.debug:
-  msg: "Accounts with empty passwords: {{ empty_password_accounts.stdout_lines }}"
-  when: empty_password_accounts.stdout != ""
+  debug:
+    msg: "Accounts with empty passwords: {{ empty_password_accounts }}"
+  when: empty_password_accounts | length > 0
 
 - name: "PRELIM | Gather UID 0 accounts other than root"
   shell: "cat /etc/passwd | awk -F: '($3 == 0 && $1 != \"root\") {i++;print $1 } END {exit i}'"
